--- a/app/views/instapost_lessons/lessons/lesson_1.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_1.html.erb
@@ -95,6 +95,9 @@ http://localhost:3000/
   You should see a nice welcome page from Ruby on Rails.
 </p>
 
+<%= image_tag 'ideator/welcome_page.png', class: 'img-responsive screenshot', style: 'margin-bottom: 30px' %>
+
+
 <div class="well">
   <h3>I don't see a welcome page/I get an error</h3>
   <p>
