--- a/app/views/submissions/_for_lesson.html.erb
+++ b/app/views/submissions/_for_lesson.html.erb
@@ -38,7 +38,7 @@
 
   <% end %>
 
-  <%= will_paginate @submissions, renderer: BootstrapPagination::Rails %>
+  <%= will_paginate @paginated_submissions, renderer: BootstrapPagination::Rails %>
 
 <% elsif @user_submission %>
 
