--- a/app/views/instapost_lessons/lessons/lesson_11.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_11.html.erb
@@ -51,7 +51,7 @@ edit_user_registration GET        /users/edit(.:format)                       de
 </code></pre>
 
 <p class="alert alert-warning">
-  Notice how I specified the method in the 'Log Out' link to be <code>:delete</code>. We need to specify that it is performing a <code>DELETE</code> action for it to work properly. Otherwise, it will perform a <code>GET</code> request and it will give you an error. Review <%= link_to 'Overview of HTTP Methods', '/mvc_lessons/3' %>.
+  Notice how I specified the method in the 'Log Out' link to be <code>:delete</code>. We need to specify that it is performing a <code>DELETE</code> action for it to work properly. By default, links perform a <code>GET</code> request. If we don't specify another HTTP verb, it will perform a <code>GET</code> request by default. Review <%= link_to 'Overview of HTTP Methods', '/mvc_lessons/3' %>.
 </p>
 
 <%= create_flashcard %>
