--- a/app/views/instapost_lessons/lessons/lesson_13.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_13.html.erb
@@ -113,11 +113,11 @@ end
 </code></pre>
 
 <p>
-  Much better! Now let's walk through what we just did.
+  Much better! <strong>Now let's walk through what we just did.</strong>
 </p>
 
 <p>
-  First, in our controller, we created a <code>new</code> method. If you remember, the methods in the controller correspond to the view file that has the same file name. In this case, the <code>new</code> method corresponds to <code>new.html.erb</code>.
+  First, in our controller, we created a <code>new</code> method. If you remember, the methods in the controller correspond to the view file that has the same file name. In this case, the <code>new</code> method corresponds to <code>new.html.erb</code> (review <%= link_to 'this lesson', '/ideator_lessons/12' %> and <%= link_to 'MVC - Overview of How Everything Works Together', '/mvc_lessons/2' %> to refreshen your mind about how controllers and views work together).
 </p>
 
 <p>
@@ -133,7 +133,7 @@ end
 <h3>Photo Uploading</h3>
 
 <p>
-  Cool. If you notice in the form, the <code>photo</code> field looks like it is a blank string input. This is because if you look at <code>schema.rb</code>, you'll notice that the <code>photo</code> column is specified as a <code>string</code> type. Instead, we want this to be a file upload button. How do we do this?
+  If you notice in the form, the <code>photo</code> field looks like it is a blank string input. This is because if you look at <code>schema.rb</code>, you'll notice that the <code>photo</code> column is specified as a <code>string</code> type. Instead, we want this to be a file upload button. How do we do this?
 </p>
 
 <p>
@@ -153,7 +153,7 @@ mount_uploader :photo, PhotoUploader
 </p>
 
 <p>
-  Awesome. Right now, the form doesn't really work if we try to submit it. In the next lesson, we're going to set up the back end logic so to get the form to actually work.
+  Awesome. Right now, the form doesn't really work if we try to submit it. In the next lesson, we're going to set up the back end logic to get the form to actually work.
 </p>
 
 <%= standard_git_workflow %>
