--- a/app/views/instapost_lessons/lessons/lesson_18.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_18.html.erb
@@ -17,7 +17,7 @@ end
 </code></pre>
 
 <p>
-  The first line, we should already understand. <code>@post</code> is assigned to the <code>Post</code> with an <code>id</code> of the <code>params[:id]</code> (refer back to <%= link_to 'What are params again?', 'http://localhost:3000/instapost_lessons/16' %>. The next line is simply saying that we want to destroy that post. Finally, the last line redirects the user to the <code>root_path</code>.
+  The first line, we should already understand. <code>@post</code> is assigned to the <code>Post</code> with an <code>id</code> of the <code>params[:id]</code> (refer back to <%= link_to 'Ideator - Editing and Updating Posts', '/ideator_lessons/14' %>. The next line is simply saying that we want to destroy that post. Finally, the last line redirects the user to the <code>root_path</code>.
 </p>
 
 <p>
@@ -26,12 +26,12 @@ end
 
 <pre><code class="erb">
 &lt;% @posts.each do |post| %&gt;
-  &lt;% @user = User.find(post.user_id) %&gt;
-  &lt;%= image_tag @user.photo %&gt;
-  &lt;%= @user.name %&gt;
+  &lt;%= image_tag post.user.photo %&gt;
+  &lt;%= post.user.name %&gt;
   &lt;%= image_tag post.photo %&gt;
   &lt;%= post.description %&gt;
-  &lt;% if post.user_id == current_user.id %&gt;
+  &lt;%= image_tag post.user.photo %&gt;
+  &lt;% if post.user == current_user %&gt;
     &lt;%= link_to 'Edit Post', edit_post_path(post.id) %&gt;
   &lt;% end %&gt;
 &lt;% end %&gt;
@@ -46,7 +46,7 @@ end
 </code></pre>
 
 <p class="alert alert-warning">
-  Notice how we added <code>method: :delete</code>. This specifies that we want to perform a <code>DELETE</code> request rather than a <code>GET</code> or <code>POST</code> request. (An example of a <code>GET</code> request is the <code>index</code> page, where we <code>GET</code> all instances of the <code>Post</code> object. An example of a <code>POST</code> request is the <code>create</code> action, where we <code>POST</code> information about the <code>Post</code> we want to create.)
+  Notice how we added <code>method: :delete</code>. This specifies that we want to perform a <code>DELETE</code> request rather than a <code>GET</code> or <code>POST</code> request. (By default, <code>link_to</code> creates a <code>GET</code> request.)
 </p>
 
 <%= create_flashcard %>
@@ -57,12 +57,11 @@ end
 
 <pre><code class="erb">
 &lt;% @posts.each do |post| %&gt;
-  &lt;% @user = User.find(post.user_id) %&gt;
-  &lt;%= image_tag @user.photo %&gt;
-  &lt;%= @user.name %&gt;
+  &lt;%= image_tag post.user.photo %&gt;
+  &lt;%= post.user.name %&gt;
   &lt;%= image_tag post.photo %&gt;
   &lt;%= post.description %&gt;
-  &lt;% if post.user_id == current_user.id %&gt;
+  &lt;% if post.user == current_user %&gt;
     &lt;%= link_to 'Edit Post', edit_post_path(post.id) %&gt;
     &lt;%= link_to 'Delete Post', post_path(post.id), method: :delete %&gt;
   &lt;% end %&gt;
