--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -37,9 +37,12 @@
       <%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View Mentor Logs'.html_safe, mentee_mentor_sessions_path(mentee_id: mentee.id) %>
 
       <% last_lesson = mentee.last_lesson %>
-      <h5><strong>Currently On: </strong></h5>
-      <h5><label class="tag_label"><%= get_lesson_name(last_lesson.course_name, last_lesson.lesson_id) %></label></h5>
-      <h5 style="color: #d9534f"><%= last_lesson.course_name.split(/(?=[A-Z])/).join(" ").chomp("Lesson") %> Lesson <%= last_lesson.lesson_id %></h5>
+
+      <% if last_lesson %>
+        <h5><strong>Currently On: </strong></h5>
+        <h5><label class="tag_label"><%= get_lesson_name(last_lesson.course_name, last_lesson.lesson_id) %></label></h5>
+        <h5 style="color: #d9534f"><%= last_lesson.course_name.split(/(?=[A-Z])/).join(" ").chomp("Lesson") %> Lesson <%= last_lesson.lesson_id %></h5>
+      <% end %>
 
 
     </div>
