--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -45,7 +45,7 @@
 
                             <% if current_user.start_date && current_user.graduation_date %>
 
-                                <li><a style="text-transform: uppercase;"><%= pluralize ((current_user.graduation_date - current_user.start_date)/1.day).to_i, 'DAY' %> UNTIL GRADUATION</a></li>
+                                <li><a style="text-transform: uppercase;"><%= pluralize ((current_user.graduation_date - DateTime.now)/1.day).to_i, 'DAY' %> UNTIL GRADUATION</a></li>
 
                             <% elsif !current_user.admitted && current_user.prework_end_date && current_user.prework_end_date > DateTime.now %>
                                 <% remaining_prework = (current_user.prework_end_date - DateTime.now).to_i / 86400 %> 
